tests/NormalTests/paczka2/big_fuzzy/82058682.err
Error in line 17: F5bX×g95 A609 28,4
Error in line 21: KukcAgE A609 56,89
Error in line 20: hsjTP A965 2,7
Error in line 8: KukcAgE A609 61,0
Error in line 29: F5bXGg95 A325 5,0
Error in line 52: hsjTP A65 23,0
Error in line 54: hsjTP A325 68,9
Error in line 59: KukcAgE A609 61,2
Error in line 57: hsjTP A459 63,4
Error in line 74: KukcAgE A459 223,7
Error in line 75: KukcAgE A965 43,3
Error in line 86: 27Z0ITspau A459 37,7
Error in line 94: 27Z0ITspau A¸09 185,3
Error in line 88: KukcAgE A965 22,9
Error in line 97: A609 A459 7h,4
Error in line 114: hsjTP A325 31,90
Error in line 113: 27Z0ITspau A965 70,4
Error in line 98: hsjTP A325 36,2
Error in line 129: hsjTP A459 75,9
Error in line 133: hsjTP A965 438,8
Error in line 127: A609 A459 383,2
Error in line 119: F5bXGg95 A965 0,9
Error in line 147: F5bXGg95 A609 -2,6
Error in line 144: 27Z0ITspau A609 0,0
Error in line 155: F5bXGg95 A609 209,6
Error in line 160: jOHto17VBg A459 38,7
Error in line 168: jOHto17VBg A609 28,0
Error in line 170: jOHto17VBg A459 70,0
Error in line 173: hsjTP A965 2,9
Error in line 175: hsjTP A609 45,4
Error in line 171: F5bXGg95 A965 80,6
Error in line 190: MbyHv352M A609 86,1
Error in line 195: MbyHv352M A325 99,4
Error in line 193: hsjTP A459 19,9
Error in line 200: jOHto17VBg A609 68,6
Error in line 199: 27Z0ITspau A609 24,5
Error in line 207: 27Z0ITspau A965 98,4
Error in line 192: F5bXGg95 A325 14,7
Error in line 220: MbyHv352M A965 6,4
Error in line 189: KukcAgE A965 86,5
Error in line 218: 27Z0ITspau A459 89,5
Error in line 209: hsjTP A609 1,6
